--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,6 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  BINARY_NAME: cec-tunnel
 
 jobs:
   build:
@@ -22,19 +21,19 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: cec-tunnel-linux-amd64
+            suffix: linux-amd64
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-            artifact_name: cec-tunnel-linux-arm64
+            suffix: linux-arm64
           - os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: cec-tunnel-darwin-amd64
+            suffix: darwin-amd64
           - os: macos-latest
             target: aarch64-apple-darwin
-            artifact_name: cec-tunnel-darwin-arm64
+            suffix: darwin-arm64
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: cec-tunnel-windows-amd64.exe
+            suffix: windows-amd64
 
     runs-on: ${{ matrix.os }}
     
@@ -58,23 +57,31 @@ jobs:
         env:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
       
-      - name: Rename binary (Unix)
+      - name: Package (Unix)
         if: runner.os != 'Windows'
         run: |
-          cp target/${{ matrix.target }}/release/${{ env.BINARY_NAME }} ${{ matrix.artifact_name }}
-          chmod +x ${{ matrix.artifact_name }}
+          cp target/${{ matrix.target }}/release/cec-tunnel cec-tunnel-${{ matrix.suffix }}
+          cp target/${{ matrix.target }}/release/cec-tunnel-server cec-tunnel-server-${{ matrix.suffix }}
+          chmod +x cec-tunnel-${{ matrix.suffix }} cec-tunnel-server-${{ matrix.suffix }}
       
-      - name: Rename binary (Windows)
+      - name: Package (Windows)
         if: runner.os == 'Windows'
         shell: pwsh
         run: |
-          Copy-Item "target\${{ matrix.target }}\release\${{ env.BINARY_NAME }}.exe" "${{ matrix.artifact_name }}"
+          Copy-Item "target\${{ matrix.target }}\release\cec-tunnel.exe" "cec-tunnel-${{ matrix.suffix }}.exe"
+          Copy-Item "target\${{ matrix.target }}\release\cec-tunnel-server.exe" "cec-tunnel-server-${{ matrix.suffix }}.exe"
       
-      - name: Upload artifact
+      - name: Upload client artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.artifact_name }}
-          path: ${{ matrix.artifact_name }}
+          name: cec-tunnel-${{ matrix.suffix }}
+          path: cec-tunnel-${{ matrix.suffix }}${{ runner.os == 'Windows' && '.exe' || '' }}
+
+      - name: Upload server artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: cec-tunnel-server-${{ matrix.suffix }}
+          path: cec-tunnel-server-${{ matrix.suffix }}${{ runner.os == 'Windows' && '.exe' || '' }}
 
   release:
     needs: build
@@ -88,13 +95,11 @@ jobs:
         with:
           path: artifacts
       
-      - name: Create checksums
+      - name: Prepare release files
         run: |
-          cd artifacts
-          for dir in */; do
-            file=$(ls "$dir")
-            sha256sum "$dir$file" >> checksums.txt
-          done
+          mkdir -p release
+          find artifacts -type f -exec cp {} release/ \;
+          cd release && sha256sum * > checksums.txt
           cat checksums.txt
       
       - name: Create Release
@@ -105,9 +110,11 @@ jobs:
           body: |
             ## CEC Tunnel ${{ github.event.inputs.version || github.ref_name }}
             
-            轻量级内网穿透客户端
+            轻量级内网穿透工具，包含客户端和服务端。
             
             ### 下载
+            
+            #### 客户端 (cec-tunnel)
             | 平台 | 架构 | 文件 |
             |------|------|------|
             | Linux | x86_64 | cec-tunnel-linux-amd64 |
@@ -116,21 +123,27 @@ jobs:
             | macOS | ARM64 (M1/M2) | cec-tunnel-darwin-arm64 |
             | Windows | x86_64 | cec-tunnel-windows-amd64.exe |
             
-            ### 使用方法
-            ```bash
-            # Linux/macOS
-            chmod +x cec-tunnel-*
-            ./cec-tunnel-linux-amd64 -s ws://gateway:8880/tunnel -n "my-server" -t tcp:22:10022
+            #### 服务端 (cec-tunnel-server)
+            | 平台 | 架构 | 文件 |
+            |------|------|------|
+            | Linux | x86_64 | cec-tunnel-server-linux-amd64 |
+            | Linux | ARM64 | cec-tunnel-server-linux-arm64 |
+            | macOS | x86_64 | cec-tunnel-server-darwin-amd64 |
+            | macOS | ARM64 (M1/M2) | cec-tunnel-server-darwin-arm64 |
+            | Windows | x86_64 | cec-tunnel-server-windows-amd64.exe |
             
-            # Windows
-            cec-tunnel-windows-amd64.exe -s ws://gateway:8880/tunnel -n "my-server" -t tcp:22:10022
+            ### 快速开始
+            
+            ```bash
+            # 服务端 (公网服务器)
+            ./cec-tunnel-server-linux-amd64 -p 8880 --port-start 10000 --port-end 20000
+            
+            # 客户端 (内网机器)
+            ./cec-tunnel-linux-amd64 -s ws://your-server:8880/tunnel -n "my-server" -t tcp:22:10022
+            
+            # 访问内网服务
+            ssh -p 10022 user@your-server
             ```
-          files: |
-            artifacts/cec-tunnel-linux-amd64/*
-            artifacts/cec-tunnel-linux-arm64/*
-            artifacts/cec-tunnel-darwin-amd64/*
-            artifacts/cec-tunnel-darwin-arm64/*
-            artifacts/cec-tunnel-windows-amd64.exe/*
-            artifacts/checksums.txt
+          files: release/*
           draft: false
           prerelease: false
