--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,19 @@
 name = "cec-tunnel"
 version = "0.1.0"
 edition = "2021"
-description = "CEC Gateway Tunnel Client - 内网穿透客户端"
+description = "CEC Tunnel - 轻量级内网穿透工具 (客户端 + 服务端)"
 license = "MIT"
-repository = "https://github.com/goyiyun/cec-tunnel"
-keywords = ["tunnel", "proxy", "nat", "reverse-proxy"]
+repository = "https://github.com/civil-engineering-cloud/cec-tunnel"
+keywords = ["tunnel", "proxy", "nat", "reverse-proxy", "frp"]
 categories = ["network-programming", "command-line-utilities"]
 
 [[bin]]
 name = "cec-tunnel"
-path = "src/main.rs"
+path = "src/client/main.rs"
+
+[[bin]]
+name = "cec-tunnel-server"
+path = "src/server/main.rs"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
@@ -26,6 +30,10 @@ chrono = { version = "0.4", features = ["serde"] }
 base64 = "0.21"
 hostname = "0.3"
 local-ip-address = "0.6"
+uuid = { version = "1", features = ["v4"] }
+dashmap = "5"
+axum = { version = "0.7", features = ["ws"] }
+tower-http = { version = "0.5", features = ["cors", "trace"] }
 
 [profile.release]
 lto = true
