--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,16 +15,13 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-native:
     strategy:
       matrix:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             suffix: linux-amd64
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            suffix: linux-arm64
           - os: macos-latest
             target: x86_64-apple-darwin
             suffix: darwin-amd64
@@ -46,16 +43,8 @@ jobs:
           toolchain: stable
           target: ${{ matrix.target }}
       
-      - name: Install cross-compilation tools (Linux ARM64)
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu
-      
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
-        env:
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
       
       - name: Package (Unix)
         if: runner.os != 'Windows'
@@ -71,20 +60,60 @@ jobs:
           Copy-Item "target\${{ matrix.target }}\release\cec-tunnel.exe" "cec-tunnel-${{ matrix.suffix }}.exe"
           Copy-Item "target\${{ matrix.target }}\release\cec-tunnel-server.exe" "cec-tunnel-server-${{ matrix.suffix }}.exe"
       
-      - name: Upload client artifact
+      - name: Upload client
         uses: actions/upload-artifact@v4
         with:
           name: cec-tunnel-${{ matrix.suffix }}
           path: cec-tunnel-${{ matrix.suffix }}${{ runner.os == 'Windows' && '.exe' || '' }}
 
-      - name: Upload server artifact
+      - name: Upload server
         uses: actions/upload-artifact@v4
         with:
           name: cec-tunnel-server-${{ matrix.suffix }}
           path: cec-tunnel-server-${{ matrix.suffix }}${{ runner.os == 'Windows' && '.exe' || '' }}
 
+  build-cross:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - target: aarch64-unknown-linux-gnu
+            suffix: linux-arm64
+
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+      
+      - name: Install cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
+      
+      - name: Build with cross
+        run: cross build --release --target ${{ matrix.target }}
+      
+      - name: Package
+        run: |
+          cp target/${{ matrix.target }}/release/cec-tunnel cec-tunnel-${{ matrix.suffix }}
+          cp target/${{ matrix.target }}/release/cec-tunnel-server cec-tunnel-server-${{ matrix.suffix }}
+          chmod +x cec-tunnel-${{ matrix.suffix }} cec-tunnel-server-${{ matrix.suffix }}
+      
+      - name: Upload client
+        uses: actions/upload-artifact@v4
+        with:
+          name: cec-tunnel-${{ matrix.suffix }}
+          path: cec-tunnel-${{ matrix.suffix }}
+
+      - name: Upload server
+        uses: actions/upload-artifact@v4
+        with:
+          name: cec-tunnel-server-${{ matrix.suffix }}
+          path: cec-tunnel-server-${{ matrix.suffix }}
+
   release:
-    needs: build
+    needs: [build-native, build-cross]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -136,7 +165,7 @@ jobs:
             
             ```bash
             # 服务端 (公网服务器)
-            ./cec-tunnel-server-linux-amd64 -p 8880 --port-start 10000 --port-end 20000
+            ./cec-tunnel-server-linux-amd64 -p 8880
             
             # 客户端 (内网机器)
             ./cec-tunnel-linux-amd64 -s ws://your-server:8880/tunnel -n "my-server" -t tcp:22:10022
