--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/server/main.rs"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
+tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
 futures = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -27,12 +27,12 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 clap = { version = "4", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
-base64 = "0.21"
-hostname = "0.3"
+base64 = "0.22"
+hostname = "0.4"
 local-ip-address = "0.6"
 uuid = { version = "1", features = ["v4"] }
-dashmap = "5"
-axum = { version = "0.7", features = ["ws"] }
+dashmap = "6"
+axum = { version = "0.7", default-features = false, features = ["ws", "tokio", "http1", "json"] }
 tower-http = { version = "0.5", features = ["cors", "trace"] }
 
 [profile.release]
