--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,8 +91,8 @@ jobs:
             rust:1.75-bookworm \
             bash -c "cargo build --release && \
                      cp target/release/cec-tunnel cec-tunnel-linux-arm64 && \
-                     cp target/release/cec-tunnel-server cec-tunnel-server-linux-arm64"
-          chmod +x cec-tunnel-linux-arm64 cec-tunnel-server-linux-arm64
+                     cp target/release/cec-tunnel-server cec-tunnel-server-linux-arm64 && \
+                     chmod +x cec-tunnel-linux-arm64 cec-tunnel-server-linux-arm64"
       
       - name: Upload client
         uses: actions/upload-artifact@v4
