--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -14,10 +14,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Mirror to Gitee
-        uses: wearerequired/git-mirror-action@v1
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.GITEE_SSH_PRIVATE_KEY }}
+      - name: Sync to Gitee
+        uses: pixta-dev/repository-mirroring-action@v1
         with:
-          source-repo: git@github.com:civil-engineering-cloud/cec-tunnel.git
-          destination-repo: git@gitee.com:civil-engineering-cloud/cec-tunnel.git
+          target_repo_url: git@gitee.com:civil-engineering-cloud/cec-tunnel.git
+          ssh_private_key: ${{ secrets.GITEE_SSH_PRIVATE_KEY }}
