--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,6 +111,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      actions: write
     
     steps:
       - name: Download all artifacts
@@ -181,3 +182,14 @@ jobs:
           files: release/*
           draft: false
           prerelease: false
+
+      - name: Trigger Gitee sync
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          TAG="${{ steps.version.outputs.tag }}"
+          echo "Triggering sync-gitee workflow for ${TAG}..."
+          gh workflow run sync-gitee.yml \
+            --repo civil-engineering-cloud/cec-tunnel \
+            --ref main \
+            -f sync_release="${TAG}"
