--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             suffix: linux-amd64
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            suffix: linux-arm64
           - os: macos-latest
             target: x86_64-apple-darwin
             suffix: darwin-amd64
@@ -37,6 +40,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Install cross-compilation toolchain (Linux ARM64)
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
@@ -44,6 +53,8 @@ jobs:
           target: ${{ matrix.target }}
       
       - name: Build
+        env:
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && 'aarch64-linux-gnu-gcc' || '' }}
         run: cargo build --release --target ${{ matrix.target }}
       
       - name: Package (Unix)
@@ -72,42 +83,8 @@ jobs:
           name: cec-tunnel-server-${{ matrix.suffix }}
           path: cec-tunnel-server-${{ matrix.suffix }}${{ runner.os == 'Windows' && '.exe' || '' }}
 
-  build-linux-arm64:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      
-      - name: Build in Docker
-        run: |
-          docker run --rm --platform linux/arm64 \
-            -v "$PWD":/app -w /app \
-            rust:1.75-bookworm \
-            bash -c "cargo build --release && \
-                     cp target/release/cec-tunnel cec-tunnel-linux-arm64 && \
-                     cp target/release/cec-tunnel-server cec-tunnel-server-linux-arm64 && \
-                     chmod +x cec-tunnel-linux-arm64 cec-tunnel-server-linux-arm64"
-      
-      - name: Upload client
-        uses: actions/upload-artifact@v4
-        with:
-          name: cec-tunnel-linux-arm64
-          path: cec-tunnel-linux-arm64
-
-      - name: Upload server
-        uses: actions/upload-artifact@v4
-        with:
-          name: cec-tunnel-server-linux-arm64
-          path: cec-tunnel-server-linux-arm64
-
   release:
-    needs: [build-native, build-linux-arm64]
+    needs: [build-native]
     runs-on: ubuntu-latest
     permissions:
       contents: write
