fix: add target_commitish to Gitee release creation API call

--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -173,6 +173,7 @@ jobs:
                 '{
                   access_token: $token,
                   tag_name: $tag,
+                  target_commitish: "main",
                   name: $name,
                   body: $body,
                   prerelease: false
